test/syntax-errors/instruction1.sos
# instruction ne peut pas commencer par local

local var = 3